--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/bottom-tabs": "6.0.4",
+    "@react-navigation/drawer": "6.1.3",
+    "@react-navigation/native": "6.0.2",
+    "@react-navigation/stack": "6.0.6",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-animatable": "1.3.3",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-modal": "12.0.3",
+    "react-native-reanimated": "1.13.2",
+    "react-native-safe-area-context": "3.3.0",
+    "react-native-screens": "3.5.0",
+    "styled-components": "5.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.0",
