--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "0.1.11",
+    "@react-native-seoul/kakao-login": "^3.3.3",
     "@react-navigation/bottom-tabs": "6.0.4",
     "@react-navigation/drawer": "6.1.3",
     "@react-navigation/native": "6.0.2",
     "@react-navigation/stack": "6.0.6",
+    "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animatable": "1.3.3",
@@ -23,17 +26,22 @@
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.3.0",
     "react-native-screens": "3.5.0",
+    "socket.io-client": "^4.1.3",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.0",
     "@babel/runtime": "7.15.3",
     "@react-native-community/eslint-config": "3.0.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "babel-jest": "27.0.6",
     "eslint": "7.32.0",
     "jest": "27.0.6",
     "metro-react-native-babel-preset": "0.66.2",
-    "react-test-renderer": "16.13.1"
+    "react-redux": "^7.2.4",
+    "react-test-renderer": "16.13.1",
+    "redux": "^4.1.1",
+    "redux-devtools": "^3.7.0"
   },
   "jest": {
     "preset": "react-native"
